force-app/main/default/objects/Account/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Packages</fullName>
            </value>
            <value>
                <fullName>Single Doc&apos;s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>