force-app/main/default/objects/Account/fields/O_t_hrs__c.field-meta.xml
<CustomField>
    <fullName>O_t_hrs__c</fullName>
    <label>O/t hrs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>