force-app/main/default/objects/Account/fields/Packages_Single_Doc__c.field-meta.xml
<CustomField>
    <fullName>Packages_Single_Doc__c</fullName>
    <label>Packages or Single Doc</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Doc_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate / Mortgage Packages</fullName>
            </value>
            <value>
                <fullName>Estate Planning Packages</fullName>
            </value>
            <value>
                <fullName>Complex Life Packages</fullName>
            </value>
            <value>
                <fullName>Other Packages</fullName>
            </value>
            <value>
                <fullName>Will’s</fullName>
            </value>
            <value>
                <fullName>Title’s</fullName>
            </value>
            <value>
                <fullName>POA’s</fullName>
            </value>
            <value>
                <fullName>Trust&apos;s</fullName>
            </value>
            <value>
                <fullName>Deed’s</fullName>
            </value>
            <value>
                <fullName>Affidavits</fullName>
            </value>
            <value>
                <fullName>Lien Docs</fullName>
            </value>
            <value>
                <fullName>Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Promissory Notes</fullName>
            </value>
            <value>
                <fullName>Cert of Ownership</fullName>
            </value>
            <value>
                <fullName>Medical Directives</fullName>
            </value>
            <value>
                <fullName>Bank Transfer of Service</fullName>
            </value>
            <value>
                <fullName>Other Single Docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>