force-app/main/default/objects/Account/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shift 1</fullName>
            </value>
            <value>
                <fullName>Shift 2</fullName>
            </value>
            <value>
                <fullName>Shift 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>