force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>job paid at</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Jobsite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>