force-app/main/default/objects/Account/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>TEXT(FLOOR(( End_Date__c - Start_Date__c)*24)) &amp;&apos; Hr &apos;&amp; TEXT(FLOOR((((( End_Date__c - Start_Date__c)*24)-FLOOR(( End_Date__c - Start_Date__c )*24))*60)))&amp;&apos; Mins&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <type>Text</type>
</CustomField>