force-app/main/default/objects/Account/fields/Total_O_T_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_O_T_Hrs__c</fullName>
    <formula>&apos;0&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total O/T Hrs</label>
    <type>Text</type>
</CustomField>