force-app/main/default/objects/Account/fields/Total_Reg_hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Reg_hrs__c</fullName>
    <formula>TRIM(LEFT( Total_Hours__c,2))&amp;&apos;:&apos;&amp;IF(VALUE(TRIM(MID(Total_Hours__c,7,2))) &lt;&gt; 0,MID(Total_Hours__c,7,2),&apos;00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reg hrs</label>
    <type>Text</type>
</CustomField>