force-app/main/default/objects/Account/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>